[gd_scene load_steps=30 format=2]

[ext_resource path="res://art/Background/Sion_Hallway.png" type="Texture" id=1]
[ext_resource path="res://art/OST/White Noise.wav" type="AudioStream" id=2]
[ext_resource path="res://Hallway/Hallway_Herb.gd" type="Script" id=3]
[ext_resource path="res://art/Back_arrow.png" type="Texture" id=4]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 641.432, 363.522 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.333629, 0.333775 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Zoomed_Hallway_In"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 641.432, 363.522 ), Vector2( 661.804, 335.565 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.333629, 0.333775 ), Vector2( 0.648019, 0.638366 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Zoomed_Hallway_Out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 661.804, 335.565 ), Vector2( 641.432, 363.522 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.648019, 0.638366 ), Vector2( 0.334, 0.334 ) ]
}

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "Window_Animation_On"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0.439216 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "Painting_Animation_On"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0.439216 ) ]
}

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "Door_Crack_On"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0.439216 ) ]
}

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "Doorknob_Animation"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0.439216 ) ]
}

[sub_resource type="Animation" id=23]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=24]
resource_name = "BackArrow_Animation_On"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BackArrow_Area2D/BackArrow_Hover:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 0.439216 ) ]
}

[sub_resource type="Animation" id=25]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BackArrow_Area2D/BackArrow_Hover:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Zoomed_Animation"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0.439216 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Zoomed_Button_End"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.439216 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Carpet_Animation_On"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Carpet_Hover:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 0.439216 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Carpet_Collision2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Carpet_Collision2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Carpet_Hover:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Radiator_Animation_On"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 0.439216 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "Lamp_Animation_On"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 0.439216 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=26]
resource_name = "Fade In"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=28]
resource_name = "Fade Out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=27]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Hallway_Herb" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2

[node name="SionHallway" type="Sprite" parent="."]
position = Vector2( 641.432, 363.522 )
scale = Vector2( 0.333629, 0.333775 )
texture = ExtResource( 1 )

[node name="ZoomedHallway" type="Control" parent="SionHallway"]
anchor_right = 1.003
anchor_bottom = 1.005
margin_left = -1945.63
margin_top = -1077.07
margin_right = -1948.15
margin_bottom = -1091.87
rect_scale = Vector2( 0.998443, 1.00189 )
mouse_filter = 2

[node name="ZoomedHallwayAnimation" type="AnimationPlayer" parent="SionHallway/ZoomedHallway"]
root_node = NodePath("../..")
anims/RESET = SubResource( 5 )
anims/Zoomed_Hallway_In = SubResource( 4 )
anims/Zoomed_Hallway_Out = SubResource( 6 )

[node name="Window" type="Button" parent="SionHallway/ZoomedHallway"]
margin_left = 1502.3
margin_top = 1128.88
margin_right = 1672.3
margin_bottom = 1272.88
mouse_default_cursor_shape = 2
flat = true

[node name="Window_Animation" type="AnimationPlayer" parent="SionHallway/ZoomedHallway/Window"]
anims/RESET = SubResource( 17 )
anims/Window_Animation_On = SubResource( 16 )

[node name="Painting" type="Button" parent="SionHallway/ZoomedHallway"]
margin_left = 2551.74
margin_top = 955.325
margin_right = 2761.74
margin_bottom = 1249.33
mouse_default_cursor_shape = 2
flat = true

[node name="Painting_Animation" type="AnimationPlayer" parent="SionHallway/ZoomedHallway/Painting"]
anims/Painting_Animation_On = SubResource( 18 )
anims/RESET = SubResource( 19 )

[node name="Door_Crack" type="Button" parent="SionHallway/ZoomedHallway"]
margin_left = 1438.93
margin_top = 1527.58
margin_right = 1738.93
margin_bottom = 1646.58
mouse_default_cursor_shape = 2
flat = true

[node name="Door_Crack_Animation" type="AnimationPlayer" parent="SionHallway/ZoomedHallway/Door_Crack"]
anims/Door_Crack_On = SubResource( 20 )
anims/RESET = SubResource( 21 )

[node name="Doorknob" type="Button" parent="SionHallway/ZoomedHallway"]
margin_left = 1449.75
margin_top = 1261.78
margin_right = 1481.75
margin_bottom = 1303.78
mouse_default_cursor_shape = 2
flat = true

[node name="Doorknob_Animation" type="AnimationPlayer" parent="SionHallway/ZoomedHallway/Doorknob"]
anims/Doorknob_Animation = SubResource( 22 )
anims/RESET = SubResource( 23 )

[node name="BackArrow" type="Sprite" parent="SionHallway/ZoomedHallway"]
visible = false
position = Vector2( 1194.73, 1535.4 )
scale = Vector2( 0.0483247, 0.0883629 )
z_index = 2
texture = ExtResource( 4 )

[node name="BackArrow_Area2D" type="Area2D" parent="SionHallway/ZoomedHallway/BackArrow"]
scale = Vector2( 18982, -539.68 )
z_index = 2

[node name="BackArrow_Collision2D" type="CollisionPolygon2D" parent="SionHallway/ZoomedHallway/BackArrow/BackArrow_Area2D"]
visible = false
polygon = PoolVector2Array( -0.00814813, -1.86682, -0.0724535, 0.0655613, -0.0606591, 0.032774, -0.0710954, 0.244452, -0.0320155, 0.262283, -0.0193887, 1.32163, 0.00758874, 1.32163, 0.0188293, 0.244452, 0.0589698, 0.262283, 0.050303, 0.0290146, 0.0606547, 0.032774 )

[node name="BackArrow_Hover" type="Polygon2D" parent="SionHallway/ZoomedHallway/BackArrow/BackArrow_Area2D"]
position = Vector2( -0.00743873, 0.0307789 )
z_index = 2
color = Color( 1, 1, 1, 0 )
polygon = PoolVector2Array( -0.0650147, 0.00199509, -0.0549052, 0.00199509, -0.0650147, 0.231504, -0.0245768, 0.198717, -0.0127824, 1.31348, 0.0141762, 1.31348, 0.0259706, 0.231504, 0.0647236, 0.231504, 0.0596689, 0.0347824, 0.0680934, 0.0347824, 0.000696927, -1.86687 )

[node name="BackArrow_Animation" type="AnimationPlayer" parent="SionHallway/ZoomedHallway/BackArrow/BackArrow_Area2D"]
root_node = NodePath("../..")
anims/BackArrow_Animation_On = SubResource( 24 )
anims/RESET = SubResource( 25 )

[node name="Zoomed_Button" type="Button" parent="SionHallway"]
margin_left = -941.028
margin_top = -419.14
margin_right = 1051.97
margin_bottom = 578.86
mouse_default_cursor_shape = 2
flat = true

[node name="Zoomed_Animation" type="AnimationPlayer" parent="SionHallway/Zoomed_Button"]
anims/RESET = SubResource( 1 )
anims/Zoomed_Animation = SubResource( 2 )
anims/Zoomed_Button_End = SubResource( 3 )

[node name="Carpet_Area2D" type="Area2D" parent="SionHallway"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -16.2816, 813.356 )
z_index = 1

[node name="Carpet_Collision2D" type="CollisionPolygon2D" parent="SionHallway/Carpet_Area2D"]
visible = false
position = Vector2( 16.2816, -813.356 )
polygon = PoolVector2Array( -1465.7, 1078.57, -632.439, 584.226, 611.458, 590.218, 1318.83, 1078.57 )

[node name="Carpet_Animation" type="AnimationPlayer" parent="SionHallway/Carpet_Area2D"]
anims/Carpet_Animation_On = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="Carpet_Hover" type="Polygon2D" parent="SionHallway/Carpet_Area2D"]
position = Vector2( 5.78192, 1.90515 )
color = Color( 1, 1, 1, 0 )
polygon = PoolVector2Array( -1440.43, 271.207, -598.173, -232.126, 618.747, -229.13, 1335.11, 265.215 )

[node name="Radiator_Area2D" type="Area2D" parent="SionHallway"]
position = Vector2( 1290.56, 549.706 )
z_index = 1

[node name="Radiator_Animation" type="AnimationPlayer" parent="SionHallway/Radiator_Area2D"]
root_node = NodePath("../Radiator_Hover")
anims/RESET = SubResource( 11 )
anims/Radiator_Animation_On = SubResource( 10 )

[node name="Radiator_Collision2D" type="CollisionPolygon2D" parent="SionHallway/Radiator_Area2D"]
visible = false
position = Vector2( -1290.56, -549.706 )
polygon = PoolVector2Array( 1119.71, 723.475, 1125.71, 696.511, 1119.71, 369.944, 1242.6, 348.972, 1536.34, 387.92, 1545.33, 405.896, 1527.35, 414.884, 1524.35, 819.348, 1542.34, 840.321, 1539.34, 852.305, 1494.38, 849.309, 1491.38, 822.344, 1470.4, 810.36, 1431.43, 825.34, 1410.45, 810.36, 1413.45, 852.305, 1377.48, 849.309, 1368.49, 825.34, 1383.48, 816.352, 1383.48, 792.384, 1149.68, 711.491, 1146.69, 735.459 )

[node name="Radiator_Hover" type="Polygon2D" parent="SionHallway/Radiator_Area2D"]
position = Vector2( -1290.56, -549.706 )
color = Color( 1, 1, 1, 0 )
polygon = PoolVector2Array( 1119.71, 717.483, 1125.71, 696.511, 1122.71, 366.948, 1242.6, 348.972, 1539.34, 390.916, 1542.34, 411.888, 1527.35, 411.888, 1521.35, 819.348, 1542.34, 834.328, 1542.34, 855.301, 1491.38, 846.313, 1494.38, 819.348, 1473.4, 813.356, 1410.45, 816.352, 1407.46, 852.305, 1374.48, 846.313, 1368.49, 825.34, 1383.48, 816.352, 1383.48, 789.388, 1143.69, 705.499, 1152.68, 720.479, 1143.69, 732.464, 1119.71, 726.471 )

[node name="Lamp_Area2D" type="Area2D" parent="SionHallway"]
position = Vector2( -1547.92, -540.849 )
z_index = 1

[node name="Lamp_Collision2D" type="CollisionPolygon2D" parent="SionHallway/Lamp_Area2D"]
visible = false
polygon = PoolVector2Array( -374.667, -215.714, 5.99506, -215.714, 17.9844, -89.8809, 53.9525, -65.9127, 56.9499, -35.9523, 170.849, 17.9762, 44.9605, 26.9643, 44.9605, 116.845, 5.99506, 131.825, -23.9784, 128.829, -47.9571, 101.865, -44.9597, 26.9643, -155.861, 26.9643, -155.861, 8.9881, -44.9597, -41.9444, -41.9624, -68.9087, -17.9837, -86.8849, -20.981, -176.766, -32.9704, -182.758, -374.667, -179.762 )

[node name="Lamp_Hover" type="Polygon2D" parent="SionHallway/Lamp_Area2D"]
color = Color( 1, 1, 1, 0 )
polygon = PoolVector2Array( -374.667, -212.718, 5.99506, -212.718, 14.9871, -185.754, 20.9818, -86.8849, 35.9685, -71.9047, 50.9552, -65.9127, 53.9525, -38.9484, 164.854, 11.9841, 149.867, 20.9722, 44.9605, 26.9643, 44.9605, 110.853, 20.9818, 128.829, -8.99164, 131.825, -38.9651, 116.845, -47.9571, 92.877, -44.9597, 26.9643, -146.869, 26.9643, -158.859, 8.9881, -41.9624, -41.9444, -44.9597, -68.9087, -14.9863, -83.8888, -17.9837, -173.77, -32.9704, -182.758, -374.667, -182.758 )

[node name="Lamp_Animation" type="AnimationPlayer" parent="SionHallway/Lamp_Area2D"]
root_node = NodePath("../Lamp_Hover")
anims/Lamp_Animation_On = SubResource( 12 )
anims/RESET = SubResource( 13 )

[node name="Background_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -30.0
bus = "Music"

[node name="FadeAnim" type="AnimationPlayer" parent="."]
"anims/Fade In" = SubResource( 26 )
"anims/Fade Out" = SubResource( 28 )
anims/RESET = SubResource( 27 )

[connection signal="mouse_entered" from="SionHallway/ZoomedHallway/Window" to="." method="_on_Window_mouse_entered"]
[connection signal="mouse_exited" from="SionHallway/ZoomedHallway/Window" to="." method="_on_Window_mouse_exited"]
[connection signal="pressed" from="SionHallway/ZoomedHallway/Window" to="." method="_on_Window_pressed"]
[connection signal="mouse_entered" from="SionHallway/ZoomedHallway/Painting" to="." method="_on_Painting_mouse_entered"]
[connection signal="mouse_exited" from="SionHallway/ZoomedHallway/Painting" to="." method="_on_Painting_mouse_exited"]
[connection signal="pressed" from="SionHallway/ZoomedHallway/Painting" to="." method="_on_Painting_pressed"]
[connection signal="mouse_entered" from="SionHallway/ZoomedHallway/Door_Crack" to="." method="_on_Door_Crack_mouse_entered"]
[connection signal="mouse_exited" from="SionHallway/ZoomedHallway/Door_Crack" to="." method="_on_Door_Crack_mouse_exited"]
[connection signal="pressed" from="SionHallway/ZoomedHallway/Door_Crack" to="." method="_on_Door_Crack_pressed"]
[connection signal="mouse_entered" from="SionHallway/ZoomedHallway/Doorknob" to="." method="_on_Doorknob_mouse_entered"]
[connection signal="mouse_exited" from="SionHallway/ZoomedHallway/Doorknob" to="." method="_on_Doorknob_mouse_exited"]
[connection signal="pressed" from="SionHallway/ZoomedHallway/Doorknob" to="." method="_on_Doorknob_pressed"]
[connection signal="input_event" from="SionHallway/ZoomedHallway/BackArrow/BackArrow_Area2D" to="." method="_on_BackArrow_Area2D_input_event"]
[connection signal="mouse_entered" from="SionHallway/ZoomedHallway/BackArrow/BackArrow_Area2D" to="." method="_on_BackArrow_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="SionHallway/ZoomedHallway/BackArrow/BackArrow_Area2D" to="." method="_on_BackArrow_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="SionHallway/Zoomed_Button" to="." method="_on_Zoomed_Button_mouse_entered"]
[connection signal="mouse_exited" from="SionHallway/Zoomed_Button" to="." method="_on_Zoomed_Button_mouse_exited"]
[connection signal="pressed" from="SionHallway/Zoomed_Button" to="." method="_on_Zoomed_Button_pressed"]
[connection signal="input_event" from="SionHallway/Carpet_Area2D" to="." method="_on_Carpet_Area2D_input_event"]
[connection signal="mouse_entered" from="SionHallway/Carpet_Area2D" to="." method="_on_Carpet_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="SionHallway/Carpet_Area2D" to="." method="_on_Carpet_Area2D_mouse_exited"]
[connection signal="input_event" from="SionHallway/Radiator_Area2D" to="." method="_on_Radiator_Area2D_input_event"]
[connection signal="mouse_entered" from="SionHallway/Radiator_Area2D" to="." method="_on_Radiator_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="SionHallway/Radiator_Area2D" to="." method="_on_Radiator_Area2D_mouse_exited"]
[connection signal="input_event" from="SionHallway/Lamp_Area2D" to="." method="_on_Lamp_Area2D_input_event"]
[connection signal="mouse_entered" from="SionHallway/Lamp_Area2D" to="." method="_on_Lamp_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="SionHallway/Lamp_Area2D" to="." method="_on_Lamp_Area2D_mouse_exited"]
